# Background-process-lib

./: .gitignore  CMakeLists.txt  background-process-lib  main.cpp  start.cmd  start.sh
lab_1/: CMakeLists.txt  main.cpp  readme.md  start.cmd  start.sh
lab_2/: BackProcess.h  main.cpp
lab_3/: build.sh  logger.h  main.cpp  start.cmd
lab_4/: logger.h  main.cpp  port_simulator_win.cpp  readme.md  simulator.cpp
